Add intro text to login screen

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,4 +1,9 @@
 {
+  "auth": {
+    "login": {
+      "welcome": "Met Shelfie heb je weer fatsoenlijk toegang tot je verleden. Wij digitaliseren je banden, jij hebt je nostalgische beelden van vroeger in je zak."
+    }
+  },
   "app": {
     "helloWorld": "Hello World!"
   }
