Add codepush support

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
+    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">eGX3efbIfCMZyA-L6SHFFVqkpeuONJFerph8G</string>
     <string name="app_name">Shelfie</string>
 </resources>
