Remove Facebook auth

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -20,8 +20,7 @@
         "welcome": "With Shelfie you can now finally have access to your past. We digitize your tapes, you get to carry around your nostalgic videos in your pocket.",
         "email": "E-mail",
         "password": "Password",
-        "login": "Sign in",
-        "facebookLogin": "Sign in with Facebook"
+        "login": "Sign in"
       }
     },
 
