--- a/config/locales/nl.json
+++ b/config/locales/nl.json
@@ -20,8 +20,7 @@
         "welcome": "Met Shelfie heb je weer fatsoenlijk toegang tot je verleden. Wij digitaliseren je banden, jij hebt je nostalgische beelden van vroeger in je zak.",
         "email": "Email",
         "password": "Wachtwoord",
-        "login": "Login",
-        "facebookLogin": "Login met Facebook"
+        "login": "Login"
       }
     },
 
