--- a/config/locales/nl.json
+++ b/config/locales/nl.json
@@ -50,6 +50,12 @@
       "title": "Shelfie Video"
     },
 
+    "welcome": {
+      "intro": "Je videobanden op je iPhone",
+      "signIn": "Login",
+      "dropOffPoints": "Videobanden inleveren"
+    },
+
     "sideMenu": {
       "logout": "Uitloggen"
     }
