Add new styling to login screen

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -5,6 +5,8 @@
 
   "containers": {
     "auth": {
+      "welcomeBack": "Welcome back!",
+      "enterEmail": "Enter your e-mail address\n to continue.",
       "title": "Authentication",
       "errors": {
         "missingEmail": "Missing e-mail",
