Remove drop off point button from launch screen

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -54,8 +54,7 @@
 
     "welcome": {
       "intro": "Your video tapes on your iPhone",
-      "signIn": "Sign in",
-      "dropOffPoints": "Video tape drop off points"
+      "signIn": "Sign in"
     },
 
     "sideMenu": {
