Add webviews for privacy policy and terms and conditions

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -59,7 +59,9 @@
 
     "sideMenu": {
       "title": "Options",
-      "logout": "Sign out"
+      "logout": "Sign out",
+      "privacyPolicy": "Privacy Policy",
+      "termsAndConditions": "Algemene Voorwaarden"
     }
   }
 }
