Change text on login screen to accomodate android and ios phones

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -53,7 +53,7 @@
     },
 
     "welcome": {
-      "intro": "Your video tapes on your iPhone",
+      "intro": "Your video tapes on your smartphone",
       "signIn": "Sign in"
     },
 
