--- a/config/locales/nl.json
+++ b/config/locales/nl.json
@@ -53,7 +53,7 @@
     },
 
     "welcome": {
-      "intro": "Je videobanden op je iPhone",
+      "intro": "Je videobanden op je smartphone",
       "signIn": "Login"
     },
 
