Add detection to adjust intro text based on type of device

--- a/config/locales/nl.json
+++ b/config/locales/nl.json
@@ -53,7 +53,8 @@
     },
 
     "welcome": {
-      "intro": "Je videobanden op je smartphone",
+      "introPhone": "Je videobanden op je smartphone",
+      "introTablet": "Je videobanden op je tablet",
       "signIn": "Login"
     },
 
