Add contact form button

--- a/config/locales/nl.json
+++ b/config/locales/nl.json
@@ -62,7 +62,8 @@
       "title": "Opties",
       "logout": "Uitloggen",
       "privacyPolicy": "Privacy Policy",
-      "termsAndConditions": "Algemene Voorwaarden"
+      "termsAndConditions": "Algemene Voorwaarden",
+      "contact": "Contact"
     }
   }
 }
